ajustes,seo y agrego sass

--- a/nosotros.html
+++ b/nosotros.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soluciones Tecnologicas</title>    
+    <title>Soluciones Tecnologicas</title> 
+    <meta name="description" content="Boleta factura electronica">
+    <meta name="keywords" content="BOLETA ELECTRONICA,FACTURA ELECTRONICA, DOCUMENTOS ELECTRONICOS, PROYECTOS TI, DESARROLLO WEB,ASESORIA, PUNTO DE VENTAS, ERP, CRM">   
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/estilo.css">
 </head>
  <main>  
     <header class="header">
@@ -23,10 +27,10 @@
                 <li><a href="./contacto.html">Contacto</a></li>              
             </ul>
         </nav>
+        <h2 class="nosh2 wrapper square">Quienes somos ?</h2>
     </header>
 
-    <section>
-        <h2 class="nosh2 wrapper square">Quienes somos ?</h2>
+    <section data-aos="flip-left">        
         <div class="card-group">
             <div class="card">              
                 <div class="card-body">
@@ -41,7 +45,7 @@
 
     <section>
         <h2 class="nosh2_1 wrapper square">Integramos</h2>
-        <div class="card-group">
+        <div class="card-group" data-aos="flip-left">
             <div class="card">
                 <img src="./img/mkt.png" class="card-img-top" alt="Marketing">
                 <div class="card-body">
@@ -60,7 +64,7 @@
     </section>
     
     <section>
-        <div class="card-group">
+        <div class="card-group" data-aos="flip-left">
             <div class="card">
                 <img src="./img/vta.png" class="card-img-top" alt="Ventas"> 
                 <div class="card-body">
@@ -78,7 +82,7 @@
          </div>
     </section>
 
-    <footer>
+    <footer data-aos="flip-left">
         <div class="icons-copyright">
             <h2 class="h2footer">Estás a punto de mejorar la gestión de tu negocio</h2>
             <div class="icons">
@@ -89,9 +93,13 @@
             </div>
             <p class="copyright">© 2023 Soluciones de Desarrollo y Tecnologia.</p>
         </div>
-        </footer>
+    </footer>
          
     <script src="index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>         
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     </main>
 </html>
