--- a/clientes.html
+++ b/clientes.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soluciones Tecnologicas</title>
+    <meta name="description" content="Boleta factura electronica">
+    <meta name="keywords" content="BOLETA ELECTRONICA,FACTURA ELECTRONICA, DOCUMENTOS ELECTRONICOS, PROYECTOS TI, DESARROLLO WEB,ASESORIA, PUNTO DE VENTAS, ERP, CRM">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/estilo.css">
 </head>
  <main>   
     <header class="header">
@@ -26,49 +30,49 @@
         <h2 class="clih2 wrapper square">NUESTROS CLIENTES</h2> 
     </header>
 
-     <section id="galerias" >            
+     <section id="galerias"  data-aos="flip-left">            
           <div class="gallerys hovergallerys">
               <div class="itemgallery">
-                  <img src="./img/versluys_3.png">
+                  <img src="./img/versluys_3.png" class="trans1">
               </div>
               <div class="itemgallery">
-                  <img src="./img/versluys.png">
+                  <img src="./img/versluys.png" class="trans2">
               </div>
               <div class="itemgallery">
-                  <img src="./img/versluys_2.png">
+                  <img src="./img/versluys_2.png" class="trans3">
               </div>
               <div class="itemgallery">
-                  <img src="./img/dimasoft.png">
+                  <img src="./img/dimasoft.png" class="trans4">
               </div>
               <div class="itemgallery">
-                  <img src="./img/ibuss.png">
+                  <img src="./img/ibuss.png" class="trans5">
               </div>
               <div class="itemgallery">
-                  <img src="./img/larrondo.png">
+                  <img src="./img/larrondo.png" class="trans6">
               </div>
               <div class="itemgallery">
-                  <img src="./img/mentec.png">
+                  <img src="./img/mentec.png" class="trans7">
               </div>            
               <div class="itemgallery">
-                  <img src="./img/advicom.jpg">
+                  <img src="./img/advicom.jpg" class="trans8">
               </div>  
               <div class="itemgallery">
-                  <img src="./img/drysoft.png">
+                  <img src="./img/drysoft.png" class="trans9">
               </div> 
               <div class="itemgallery">
-                  <img src="./img/tecknopos.png">
+                  <img src="./img/tecknopos.png" class="trans10">
               </div>
               <div class="itemgallery">
-                  <img src="./img/endif.png">
+                  <img src="./img/endif.png" class="trans11">
               </div>                   
               <div class="itemgallery">
-                  <img src="./img/ecoboleta.png">
+                  <img src="./img/ecoboleta.png" class="trans12">
               </div>                                          
           </div>
       </section>
 
       <section class="carcli"> 
-        <h2 class="clih2 wrapper square">CARRUSEL NOS PREFIEREN</h2>            
+        <h2 class="clih2sub wrapper square">CARRUSEL ELLOS CONFIAN EN NOSOTROS</h2>            
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -110,7 +114,7 @@
       </div>
     </section>
 
-    <footer>
+    <footer data-aos="flip-left">
       <h2 class="h2footer">Estás a punto de mejorar la gestión de tu negocio</h2>
        <div class="icons-copyright">
            <div class="icons">
@@ -123,7 +127,11 @@
        </div>
      </footer>
                 
-    <script src="index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="index.js"></script>    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>    
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     </main>
 </html>
