--- a/staf.html
+++ b/staf.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soluciones Tecnologicas</title>    
+    <title>Soluciones Tecnologicas</title> 
+    <meta name="description" content="Boleta factura electronica">
+    <meta name="keywords" content="BOLETA ELECTRONICA,FACTURA ELECTRONICA, DOCUMENTOS ELECTRONICOS, PROYECTOS TI, DESARROLLO WEB,ASESORIA, PUNTO DE VENTAS, ERP, CRM">   
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/estilo.css">
 </head>
  <main>  
     <header class="header">
@@ -23,39 +27,39 @@
                 <li><a href="./contacto.html">Contacto</a></li>              
             </ul>
         </nav>
-        <h2 class="clih2 wrapper square">NUESTRO STAFF</h2>        
+        <h2 class="stah2 wrapper square">NUESTRO STAFF</h2>        
      </header>
 
-    <section id="galerias" >
+    <section id="galerias" data-aos="flip-left" >
           <div class="gallerys hovergallerys">
             <div class="itemgallery">
-                <img src="./img/staf1.jpg">
+                <img src="./img/staf1.jpg" class="trans1">
                 <p class="namestaf">ALICIA</p>
             </div>
             <div class="itemgallery">
-                <img src="./img/staf2.jpg">
+                <img src="./img/staf2.jpg" class="trans2">
                 <p class="namestaf">JULIA</p>
             </div>
             <div class="itemgallery">
-                <img src="./img/staf3.jpg">
+                <img src="./img/staf3.jpg"class="trans3">
                 <p class="namestaf">ALVARO</p>
             </div>
             <div class="itemgallery">
-                <img src="./img/staf4.jpg">
+                <img src="./img/staf4.jpg" class="trans4">
                 <p class="namestaf">MERCEDES</p>
             </div>       
             <div class="itemgallery">
-                <img src="./img/staf5.jpg">
+                <img src="./img/staf5.jpg" class="trans5">
                 <p class="namestaf">ALFONSO</p>
             </div>
             <div class="itemgallery">
-                <img src="./img/staf6.jpg">
+                <img src="./img/staf6.jpg" class="trans6">
                 <p class="namestaf">CARMEN</p>
             </div>                                           
           </div>
       </section>
 
-      <section >
+      <section data-aos="flip-left">
         <div class="card-group">
             <div class="card">
               <div class="card-body">
@@ -78,7 +82,7 @@
           </div>
      </section> 
         
-     <section >
+     <section data-aos="flip-left">
         <div class="card-group">
             <div class="card">
               <div class="card-body">
@@ -102,7 +106,7 @@
           </div>
      </section> 
 
-     <footer>
+     <footer data-aos="flip-left">
       <h2 class="h2footer">Estás a punto de mejorar la gestión de tu negocio</h2>
        <div class="icons-copyright">
            <div class="icons">
@@ -117,5 +121,10 @@
       
     <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>    
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     </main>
 </html>
