agrego sass,seo y modificaciones

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soluciones Tecnologicas</title>    
-    <meta name="description" content="Boleta factura electronica">
+    <meta name="description" content="Boleta Factura electronica Documentos electronicos punto de ventas">
     <meta name="keywords" content="BOLETA ELECTRONICA,FACTURA ELECTRONICA, DOCUMENTOS ELECTRONICOS, PROYECTOS TI, DESARROLLO WEB,ASESORIA, PUNTO DE VENTAS, ERP, CRM">
-
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
