--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
         <img src="./img/movil2.jpg" alt="dispositivo" >
         <div id="inicio" class="head">
-            <h1 data-aos="flip-left">Boleta Factura<br/>Electrónica<br/>para tu empresa</h1>
+            <!-- <h1 data-aos="flip-left">Boleta Factura<br/>Electrónica<br/>para tu empresa</h1> -->
+            <h1 data-aos="flip-left">Boleta Factura Electrónica para tu empresa</h1>
              <div>
                 <p data-aos="flip-left">ASESORIA DE PROFESIONALES EXPERTOS. </p>              
              </div>
