--- a/staf.html
+++ b/staf.html
@@ -30,7 +30,7 @@
         <h2 class="stah2 wrapper square">NUESTRO STAFF</h2>        
      </header>
 
-    <section id="galerias" data-aos="flip-left" >
+    <section id="galerias" data-aos="slipe-top" >
           <div class="gallerys hovergallerys">
             <div class="itemgallery">
                 <img src="./img/staf1.jpg" class="trans1">
