--- a/clientes.html
+++ b/clientes.html
@@ -9,7 +9,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">    
     <link rel="stylesheet" href="./css/estilo.css">
 </head>
  <main>   
@@ -22,20 +22,21 @@
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./nosotros.html">Nosotros</a></li>
                 <li><a href="./servicios.html">Servicios</a></li>
+                <li><a href="./api.html">Api</a></li>
                 <li><a href="./clientes.html">Clientes</a></li>
-                <li><a href="./staf.html">Staff</a></li>
+                <li><a href="./staff.html">Staff</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>              
             </ul>
         </nav>
         <h2 class="clih2 wrapper square">NUESTROS CLIENTES</h2> 
     </header>
 
-     <section id="galerias"  data-aos="flip-left">            
+     <section id="galerias" >            
           <div class="gallerys hovergallerys">
-              <div class="itemgallery">
+              <div class="itemgallery animate__swing">
                   <img src="./img/versluys_3.png" class="trans1">
               </div>
-              <div class="itemgallery">
+              <div class="itemgallery animate__swing">
                   <img src="./img/versluys.png" class="trans2">
               </div>
               <div class="itemgallery">
