--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./nosotros.html">Nosotros</a></li>
                 <li><a href="./servicios.html">Servicios</a></li>
+                <li><a href="./api.html">Api</a></li>                
                 <li><a href="./clientes.html">Clientes</a></li>
-                <li><a href="./staf.html">Staff</a></li>
+                <li><a href="./staff.html">Staff</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>                
             </ul>
         </nav>
