--- a/servicios.html
+++ b/servicios.html
@@ -23,12 +23,13 @@
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./nosotros.html">Nosotros</a></li>
                 <li><a href="./servicios.html">Servicios</a></li>
+                <li><a href="./api.html">Api</a></li>
                 <li><a href="./clientes.html">Clientes</a></li>
-                <li><a href="./staf.html">Staff</a></li>
+                <li><a href="./staff.html">Staff</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>              
             </ul>
         </nav>
-    </header>
+      </header>
 
       <section id="servicios">
           <h2 class="serh2 wrapper square">Nuestros Servicios</h2>
@@ -87,7 +88,23 @@
           </div>
         </section>  
 
-        <section class="asesoria" data-aos="flip-left">
+          <section data-aos="flip-left">        
+            <div class="card-group">
+                <div class="card">              
+                    <div class="card-body">
+                    <p class="card-text"> Conecta tu aplicación al SII de forma rápida y simple, usando nuestra API.</p>
+                    <p class="card-text"> Te asesoramos en el proceso de conexión y dispondrás de toda la documentación que requieras.</p>
+                    <p class="card-text"> Conéctate usando el lenguaje que tú conoces y genera todos los tipos de documentos tributarios disponibles en Chile. Además, podrás obtener documentos de compra y libros electrónicos.</p>
+                    <p class="card-text"> ¡Cuenta con nosotros para tu proyecto!</p>                
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <h2 class="serh2 wrapper square">Detalle Ténicos Servicios</h2>
+        <br>
+        <br>
+        <section class="asesoria" data-aos="flip-left">          
           <div class="card-group">
               <div class="card">
                 <img src="./img/mkt.png" class="card-img-top" alt="Ventas">
@@ -109,13 +126,6 @@
                   <div class="card-body">
                   <h5 class="card-title">Documentos Electronicos</h5>
                   <p class="card-text">Libérate de la tediosa tarea de crear facturas con datos de cotizaciones. Ahorra un valioso 75% de tu tiempo. Con Nubox Pyme lo haces en un click.</p>
-                  </div>
-              </div>
-              <div class="card">
-                  <img src="./img/inv.png" class="card-img-top" alt="Locales">
-                  <div class="card-body">
-                  <h5 class="card-title">Integración con Bancos</h5>
-                  <p class="card-text">Gracias a la integración de Nubox Pyme con los bancos, obtienes automáticamente todos tus movimientos y ahorras hasta 2 horas de trabajo manual.</p>
                   </div>
               </div>
            </div>
@@ -145,13 +155,6 @@
                   <p class="card-text">Vende desde tus publicaciones. Muestra la información de tu producto y su precio directamente en Instagram. Una imagen vende más que mil palabras.</p>
                   </div>
               </div>
-              <div class="card">
-                  <img src="./img/inv.png" class="card-img-top" alt="Locales">
-                  <div class="card-body">
-                  <h5 class="card-title">Vende en Facebook</h5>
-                  <p class="card-text">Crea publicaciones en Facebook que se transformen en ventas. Existen millones de personas navegando en Facebook, esto te ayudará a vender más.</p>
-                  </div>
-              </div>
          </section>
 
          <section class="asesoria" data-aos="flip-left">
@@ -167,8 +170,8 @@
           <div class="card">
             <img src="./img/inv.png" class="card-img-top" alt="Locales">
             <div class="card-body">
-            <h5 class="card-title">Vende en Google Shooping</h5>
-            <p class="card-text">Con el comparador de precios de Google podrás despliega tus productos con imagen y precio en los primeros lugares del navegador.</p>
+            <h5 class="card-title">Precios Bajos</h5>
+            <p class="card-text">Paga por el mejor servicio de API DTE en Chile.</p>
             </div>
            </div>
            <!--  -->
@@ -180,17 +183,85 @@
             <p class="card-text">Vende mientras estás en terreno manteniendo el inventario sincronizado y evitando procesos manuales. Además podrás enviar tu boleta en el minuto que vendes, en forma automática.</p>
             </div>
            </div>
-
-           <div class="card">
-            <img src="./img/inv.png" class="card-img-top" alt="Locales">
-            <div class="card-body">
-            <h5 class="card-title">Vende desde tu casa u oficina</h5>
-            <p class="card-text">Puedes vender desde la oficina o desde tu casa, administrando tus clientes, preparando cotizaciones y administrando las cuentas por cobrar.</p>
-            </div>
-           </div>
          </div>
         <section>  
-          
+
+          <!--  -->
+          <section class="asesoria" data-aos="flip-left">
+            <div class="card-group">
+              <div class="card">
+                <img src="./img/inv.png" class="card-img-top" alt="Locales">
+                <div class="card-body">
+                <h5 class="card-title">Vende en Mercado Libre</h5>
+                <p class="card-text">Ofrece tus productos en el marketplace más grande de latinoamérica. ¿Para qué? Para atraer a nuevos clientes que conozcan tu marca</p>
+                </div>
+            </div>
+  
+            <div class="card">
+              <img src="./img/inv.png" class="card-img-top" alt="Locales">
+              <div class="card-body">
+              <h5 class="card-title">Vende en Google Shooping</h5>
+              <p class="card-text">Con el comparador de precios de Google podrás despliega tus productos con imagen y precio en los primeros lugares del navegador.</p>
+              </div>
+             </div>
+             <!--  -->
+  
+             <div class="card">
+              <img src="./img/inv.png" class="card-img-top" alt="Locales">
+              <div class="card-body">
+              <h5 class="card-title">Vender en Terreno</h5>
+              <p class="card-text">Vende mientras estás en terreno manteniendo el inventario sincronizado y evitando procesos manuales. Además podrás enviar tu boleta en el minuto que vendes, en forma automática.</p>
+              </div>
+             </div>
+  
+             <div class="card">
+              <img src="./img/inv.png" class="card-img-top" alt="Locales">
+              <div class="card-body">
+              <h5 class="card-title">Vende desde tu casa u oficina</h5>
+              <p class="card-text">Puedes vender desde la oficina o desde tu casa, administrando tus clientes, preparando cotizaciones y administrando las cuentas por cobrar.</p>
+              </div>
+             </div>
+           </div>
+          <section>  
+            <!--  -->
+          <!--  -->
+          <section class="asesoria" data-aos="flip-left">
+            <div class="card-group">    
+              <div class="card">
+                <img src="./img/inv.png" class="card-img-top" alt="Locales">
+                <div class="card-body">
+                <h5 class="card-title">Integración con Bancos</h5>
+                <p class="card-text">Gracias a la integración de Nubox Pyme con los bancos, obtienes automáticamente todos tus movimientos y ahorras hasta 2 horas de trabajo manual.</p>
+                </div>
+              </div>
+  
+            <div class="card">
+              <img src="./img/inv.png" class="card-img-top" alt="Locales">
+              <div class="card-body">
+              <h5 class="card-title">Vende en Google Shooping</h5>
+              <p class="card-text">Con el comparador de precios de Google podrás despliega tus productos con imagen y precio en los primeros lugares del navegador.</p>
+              </div>
+             </div>
+             <!--  -->
+  
+             <div class="card">
+              <img src="./img/inv.png" class="card-img-top" alt="Locales">
+              <div class="card-body">
+              <h5 class="card-title">Vende en Facebook</h5>
+              <p class="card-text">Crea publicaciones en Facebook que se transformen en ventas. Existen millones de personas navegando en Facebook, esto te ayudará a vender más.</p>
+              </div>
+          </div>
+  
+          <div class="card">
+            <img src="./img/inv.png" class="card-img-top" alt="Locales">
+             <div class="card-body">
+             <h5 class="card-title">Interfaces Amistosa</h5>
+             <p class="card-text">Diseñamos un espacio de desarrollo completamente pensado en los integradores y desarrolladores</p>
+            </div>
+          </div>
+        </div>
+          <section>  
+
         <footer data-aos="flip-left">
           <div class="icons-copyright">
               <h2 class="h3footer">Estás a punto de mejorar la gestión de tu negocio</h2>
